--- a/front/content/css/inicial.css
+++ b/front/content/css/inicial.css
@@ -11,6 +11,7 @@ body{
     align-items: center;
     justify-content: center;
     min-height: 100vh;
+    flex-direction: column;
 }
 #container{
     border-radius: 20px;
@@ -52,30 +53,107 @@ form button{
 }
 #infos{
     text-align: center;
+    margin: 10px;
+    width: 800px;
+    height: 50px;
+    border-radius: 10px;
+    justify-content: center;
+    margin-bottom: 400px;
 }
-#max-min{
-    font-size: 12px;
-    margin: none;
+#outrasInfos #dia #semana{
+
+    text-align: center;
+    margin: 10px;
+    width: 800px;
+    height: 50px;
+    border-radius: 10px;
+    justify-content: center;
+}
+#max, #min, #chuva{
+    font-size: 35px;
+    margin-bottom: none;
 }
 
 #valorTempo{
-    font-size: 80px;
+    font-size: 100px;
     margin: none;
     padding-bottom: none;
+    float: left;
 }
-#clima{
+.clima{
     margin-top: 20px;
     font-size: 20px;
-    margin-bottom: 60px;
+    margin-bottom: 40px;
+    text-align: left;
 }
 
 #dia #primeiraDia{
-    height: 35px;
-    width: 35px;
+    height: 100px;
+    width: 100px;
 
 }
 #segundaSemana{
-    height: 50px;
-    width: 50px;
+    height: 100px;
+    width: 100px;
+    margin-bottom: 10px;
     
+}
+#tipo{
+    height: 150px;
+    width: 150px;
+    float: left;
+}
+#organiza {
+display: flex;
+margin-top: 50px;
+
+}
+#organiza > #cidade{
+    margin-right: 30px;    
+}
+#direita #esquerda{
+    flex: 10;
+    margin: 10px;
+    width: 350px;
+    height: 220px;
+    margin: 10px;
+    
+    background-color: blue;
+}
+
+h4{
+    
+    margin-bottom: 20px;
+}
+#botao{
+    display: flex;
+    position: fixed;
+    top: 0;
+    right: 0;
+    margin-bottom: 50px;
+    
+}
+#botao > #bnt-notificacoes{
+    margin-right: 10px;
+}
+#botao > #bnt-perfil{
+    cursor:pointer;
+}
+#bnt-notificacoes, #bnt-perfil{
+    background-color: transparent;
+    border: none;
+    width: 100%;
+    color: black;
+    font-size: 20px;
+    margin-right: 30px;
+}
+#bnt-notificacoes, #bnt-perfil:focus-visible{
+    outline: none;
+    
+}
+#bnt-partilha{
+    background-color: transparent;
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
 }
