--- a/front/content/css/inicial.css
+++ b/front/content/css/inicial.css
@@ -13,12 +13,7 @@ body{
     min-height: 100vh;
     flex-direction: column;
 }
-#container{
-    border-radius: 20px;
-    padding: 18px;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);   
 
-}
 form{
     display: flex;
     align-items: center;
@@ -44,7 +39,7 @@ form button{
 }
 
 .corpo{
-    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 #cidade{
@@ -53,12 +48,12 @@ form button{
 }
 #infos{
     text-align: center;
-    margin: 10px;
+    margin: 20px;
     width: 800px;
     height: 50px;
     border-radius: 10px;
     justify-content: center;
-    margin-bottom: 400px;
+    margin-bottom: 300px;
 }
 #outrasInfos #dia #semana{
 
@@ -83,7 +78,7 @@ form button{
 .clima{
     margin-top: 20px;
     font-size: 20px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     text-align: left;
 }
 
@@ -91,6 +86,13 @@ form button{
     height: 100px;
     width: 100px;
 
+}
+#dia, #semana{
+    margin-bottom: 20px;
+}
+hr{
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
 #segundaSemana{
     height: 100px;
