--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+    <input type="hidden" name="cur-location" id="cur-location">
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid justify-content-end">
         <a href="#"><i class="fa-solid fa-bell"></i></a>
@@ -17,7 +18,7 @@
       <div class="container d-flex flex-row justify-content-between gap-5" id="info-controls">
         <div class="d-flex flex-row justify-content-around">
           <p id="current-city" class="fs-2">City Name</p>
-          <button class="btn"><i class="fa-solid fa-share-nodes fs-2"></i></button>
+          <button class="btn" id="share" data-bs-toggle="modal" data-bs-target="#share-modal"><i class="fa-solid fa-share-nodes fs-2"></i></button>
         </div>
         <form action="#">
           <div class="input-group">
@@ -48,7 +49,7 @@
 
       <div class="container">
         <p class="fs-2">Próximas horas</p>
-        <div class="container d-flex flex-row" id="next-hours"></div>
+        <div class="container d-flex flex-row flex-nowrap overflow-auto" id="next-hours"></div>
       </div>
 
       <div class="container">
@@ -56,6 +57,19 @@
         <div class="container d-flex flex-row flex-nowrap overflow-auto" id="next-days"></div>
       </div>
 
+    </div>
+    <div class="modal fade" id="share-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5">Link de partilha</h1>
+            <button class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
